--- a/wp-content/themes/fipradotcom/sass/elements/_testimonials.scss
+++ b/wp-content/themes/fipradotcom/sass/elements/_testimonials.scss
@@ -15,6 +15,10 @@
       @include font-size(21);
       font-style: normal;
       line-height: $v-rhythm * 2.5;
+      @include media($media__medium) {
+        padding-left:$column * 3;
+        padding-right:$column * 3;
+      }
 
     }
 
