--- a/wp-content/themes/fipradotcom/sass/elements/_buttons.scss
+++ b/wp-content/themes/fipradotcom/sass/elements/_buttons.scss
@@ -9,6 +9,7 @@
   margin-right: em(16px);
   &:last-child { margin-right: 0; }
   &.no-margin { margin:0; }
+  &.btn-large { padding: $v-rhythm * 0.5 em(24px); @include media($media__medium) { @include font-size(18); } }
   &.btn-small { @include font-size(14); }
   &.btn-extra-small { @include font-size(12); }
 
@@ -41,7 +42,7 @@
     padding:$v-rhythm * 0.5 em(4px) !important;
   }
 
-  &.btn-large { @include font-size(22); }
+//  &.btn-large { @include font-size(22); }
 
   &.btn-omega { margin-right:0 !important; }
 
