--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -873,7 +873,8 @@ table:not(.no-style) {
   font-family: 'Lato', Arial, Helvetica, sans-serif;
   font-size: 12px;
   font-size: 0.75rem;
-  background-color: #3e4a62; }
+  background-color: #5c6882;
+  border-top: 1px solid #717e9b; }
   #site-info-container::after {
     clear: both;
     content: "";
@@ -1418,6 +1419,11 @@ ul.team-member-expertise {
   padding-right: 0 !important;
   padding-left: 0 !important;
   padding-bottom: 0 !important; }
+.full-width-block-container.small-padding {
+  padding-top: 2.25rem !important;
+  padding-right: 0 !important;
+  padding-left: 0 !important;
+  padding-bottom: 2.25rem !important; }
 
 .hero .full-width-block-content-container, #hero .full-width-block-content-container {
   height: 100%;
@@ -1598,9 +1604,6 @@ ul.team-member-expertise {
       text-align: left; }
       .full-width-block-content.left.narrow {
         padding-right: 25.41481em; } }
-  @media screen and (min-width: 1200px) {
-    .full-width-block-content.left.narrow {
-      padding-right: 33.88641em; } }
   @media screen and (min-width: 1500px) {
     .full-width-block-content.left.narrow {
       padding-right: 42.35801em; } }
@@ -1611,11 +1614,6 @@ ul.team-member-expertise {
       text-align: left; }
       .full-width-block-content.right.narrow {
         padding-left: 25.41481em; } }
-  @media screen and (min-width: 1200px) {
-    .full-width-block-content.right {
-      text-align: left; }
-      .full-width-block-content.right.narrow {
-        padding-left: 33.88641em; } }
   @media screen and (min-width: 1500px) {
     .full-width-block-content.right {
       text-align: left; }
@@ -1625,10 +1623,6 @@ ul.team-member-expertise {
   .full-width-block-content.center.narrow.narrow {
     padding-left: 12.7074em;
     padding-right: 12.7074em; } }
-@media screen and (min-width: 1200px) {
-  .full-width-block-content.center.narrow.narrow {
-    padding-left: 16.9432em;
-    padding-right: 16.9432em; } }
 @media screen and (min-width: 1500px) {
   .full-width-block-content.center.narrow.narrow {
     padding-left: 21.17901em;
@@ -4522,24 +4516,6 @@ embed, iframe, object {
   font-size: 14px;
   font-size: 0.875rem; }
 
-@media screen and (min-width: 1200px) {
-  .home .full-width-block-container.with-content-bar {
-    padding: 6rem 0; } }
-@media screen and (min-width: 1500px) {
-  .home .full-width-block-container.with-content-bar {
-    padding: 11.25rem 0; } }
-@media screen and (min-width: 1200px) {
-  .home .full-width-block-container.with-content-bar.content-bar-top {
-    padding: 0 0 12rem; } }
-@media screen and (min-width: 1500px) {
-  .home .full-width-block-container.with-content-bar.content-bar-top {
-    padding: 0 0 22.5rem; } }
-@media screen and (min-width: 1200px) {
-  .home .full-width-block-container.with-content-bar.content-bar-bottom {
-    padding: 12rem 0 0; } }
-@media screen and (min-width: 1500px) {
-  .home .full-width-block-container.with-content-bar.content-bar-bottom {
-    padding: 22.5rem 0 0; } }
 .home #site-content-container {
   margin-top: 0 !important; }
 .home #home-hero-carousel-container {
@@ -4579,16 +4555,6 @@ embed, iframe, object {
 @media screen and (max-width: 481px)  {
   .home #home-hero-carousel .full-width-block-content .blurb {
     display: none; } }
-@media screen and (max-width: 801px)  {
-  .home #home-hero-carousel .full-width-block-content h1 {
-    font-size: 24px;
-    font-size: 1.5rem;
-    line-height: 2.25rem; } }
-@media screen and (min-width: 801px) {
-  .home #home-hero-carousel .full-width-block-content h1 {
-    font-size: 36px;
-    font-size: 2.25rem;
-    line-height: 2.625rem; } }
 .home #home-hero-carousel .owl-pagination {
   margin-top: -40px; }
   .home #home-hero-carousel .owl-pagination .owl-page span {
@@ -4632,3 +4598,5 @@ embed, iframe, object {
   margin: 2.25rem 0; }
 #our-people-container h1 .owl-prev, #our-people-container h1 .owl-next, #our-people-container h2 .owl-prev, #our-people-container h2 .owl-next, #our-people-container h3 .owl-prev, #our-people-container h3 .owl-next {
   color: #00257f; }
+#our-people-container .full-width-block-content-container {
+  padding-bottom: 0; }
