--- a/wp-content/themes/fipradotcom/sass/modules/_modules.scss
+++ b/wp-content/themes/fipradotcom/sass/modules/_modules.scss
@@ -14,6 +14,20 @@
   width: 100%;
 }
 
+.svg-icon {
+  z-index: 5;
+  position: relative;
+  display: inline-block;
+  float:left;
+  width: 30px; height: 30px;
+  &.margin-r { margin-right: em(12px); }
+  svg { position: absolute; display:block; width:100%;
+    top:0; bottom: 0; left: 0; right: 0;
+    margin: auto;
+    fill: white;
+  }
+}
+
 .highlight-box {
   font-family: $font__sans;
   &.primary {
@@ -160,7 +174,7 @@
         position: absolute;
         border-left: 1px solid white;
         height: 100%;
-        left: em(26px);
+        left: em(30px);
         top: em(24px);
       }
     }
@@ -177,21 +191,16 @@
       a {
         display: block;
         padding: $v-rhythm * 0.5 em(10px);
-        line-height: em(32px);
+        line-height: em(40px);
         &:hover { background-color: rgba(black, 0.1); }
         i { display: inline-block; margin-right: em(4px); }
-        .icon {
-          z-index: 5;
-          position: relative;
-          display: inline-block;
-          color: $color__fipra-blue;
-          text-align: center;
-          margin-right: em(12px);
+        .svg-icon {
           background-color: white;
-          width: 32px; height: 32px;
+          width: 40px; height: 40px;
           @include border-top-radius(50%);
           @include border-bottom-radius(50%);
-          @include font-size(18);
+          svg { fill:$color__fipra-blue; width:60%; }
+          }
         }
       }
     }
@@ -229,7 +238,6 @@
         }
       }
     }
-  }
 }
 
 .white-box {
