--- a/wp-content/themes/fipradotcom/sass/pages/_expertise.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_expertise.scss
@@ -1,43 +1,55 @@
-#hero {
-  &.expertise {
+#content-container.expertise-area {
+  #hero {
 
     .full-width-block-content-container {
-      h1 { margin-bottom: $v-rhythm;
-        i { display:block;
-          @include media($media__medium) { display:inline-block; margin-right:rem(8px); }
+
+      .full-width-block-content {
+        h1 { margin-bottom: $v-rhythm; position:relative;
+          @include media($media__medium) { padding-left: 60px; }
+
+          .svg-icon {
+            @include media(max-width $media__medium) { display:none; }
+            position: absolute;
+            top:6px; left:0;
+            width: 42px; height: 42px;
+            margin-right:0;
+          }
+        }
+      }
+
+      p { @include media($media__medium) { padding-left: 60px; } }
+    }
+
+  }
+
+  #expertise-menu-container {
+
+    #expertise-carousel {
+      margin-top: $v-rhythm * 3;
+      .expertise-area {
+        margin:0 12px;
+        a {
+          display:block;
+          //        @extend .white-box;
+          width:100%; height:100%;
+          text-align: center;
+          &:hover { opacity: 0.5; }
+
+          .svg-icon { display: block !important; width:100%; background-color: $color__fipra-blue-gray; padding:$v-rhythm * 3; margin-bottom:$v-rhythm;
+            svg { height:70%; }}
+          .expertise-area-name { @include font-size(18); padding: $v-rhythm em(12px); }
         }
       }
     }
+
   }
 
-}
-
-#expertise-menu-container {
-
-  #expertise-carousel {
-    margin-top: $v-rhythm * 3;
-    .expertise-area {
-      margin:0 12px;
-      a {
-        display:block;
-//        @extend .white-box;
-        width:100%; height:100%;
-        text-align: center;
-        &:hover { opacity: 0.5; }
-
-        i { @include font-size(42); display: block; background-color: $color__fipra-blue-gray; color: white; padding:$v-rhythm * 2 em(12px); }
-        .circle-icon { margin-bottom:0; }
-        .expertise-area-name { @include font-size(18); padding: $v-rhythm em(12px); }
-      }
-    }
+  // Expertise landing page
+  .areas-of-expertise-block .full-width-block-content {
+    text-align: left !important;
   }
-
+  .public-affairs-services-block .full-width-block-content {
+    text-align: left !important;
+  }
 }
 
-// Expertise landing page
-.areas-of-expertise-block .full-width-block-content {
-  text-align: left !important;
-}
-.public-affairs-services-block .full-width-block-content {
-  text-align: left !important;
-}
