--- a/wp-content/themes/fipradotcom/sass/pages/_profile.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_profile.scss
@@ -55,7 +55,8 @@
       width:100%; height:100%;
       text-align: center;
       &:hover { opacity: 0.5; }
-      i { @include font-size(42); display: block; background-color: $color__fipra-blue-gray; color: white; padding:$v-rhythm em(12px); }
+      .svg-icon { display: block !important; width:100%; background-color: $color__fipra-blue-gray; padding:$v-rhythm * 3; margin-bottom:$v-rhythm;
+        svg { height:70%; }}
       .expertise-area-name { @include font-size(16); padding: $v-rhythm; color:white; }
     }
   }
