--- a/wp-content/themes/fipradotcom/sass/pages/_unit.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_unit.scss
@@ -1,6 +1,7 @@
-.full-width-block-container {
-  &.unit {
-//    @include media($media__medium) { min-height:em(400px); }
+#content-container.unit {
+
+  #hero {
+    //    @include media($media__medium) { min-height:em(400px); }
     //    @include media(max-width $media__small) { background:$color__fipra-blue !important; }
 
     .full-width-block-content {
@@ -16,4 +17,24 @@
 
     }
   }
+
+  #team-menu-container {
+    .full-width-block-content-container {
+      padding-bottom: 0;
+
+      .svg-icon {
+        float:left;
+        &:not(:last-child) { margin-right: rem(6px); }
+        background-color: $color__fipra-blue;
+        width: 32px; height: 32px;
+        @include border-top-radius(50%);
+        @include border-bottom-radius(50%);
+        @include media(max-width $media__medium) { display:none; }
+        &:hover { opacity: 0.7; }
+        svg { fill:white; width:60%; }
+      }
+    }
+  }
+
 }
+
