--- a/wp-content/themes/fipradotcom/sass/typography/_headings.scss
+++ b/wp-content/themes/fipradotcom/sass/typography/_headings.scss
@@ -40,6 +40,8 @@ h1 {
     font-weight: $font__bold;
     text-transform: uppercase;
   }
+
+  &.upper { @include media(max-width $media__small) { @include font-size(18); } }
 }
 
 h2 {
@@ -92,5 +94,5 @@ h1, h2, h3, h4, h5, h6 {
   &.no-margin { margin:0 !important; }
   &.no-bottom-margin { margin-bottom:0 !important; }
   &.no-top-margin { margin-top:0; }
-  &.upper { font-weight: $font__normal; letter-spacing: 7px; text-transform: uppercase; }
+  &.upper { font-weight: $font__normal; text-transform: uppercase; @include media($media__medium) { letter-spacing: 7px; } }
 }
