--- a/wp-content/themes/fipradotcom/sass/layout/_full-width-block.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_full-width-block.scss
@@ -24,6 +24,17 @@
   }
 }
 
+// Non-hero version
+.full-width-block-content-container {
+  height: 100%;
+  padding-top: $v-rhythm * 2; padding-right: 0; padding-left: 0; padding-bottom: $v-rhythm * 2;
+  @include media($media__medium) { padding-top: $v-rhythm * 5; padding-right: 0; padding-left: 0; padding-bottom: $v-rhythm * 5; }
+
+  &.page-width { @extend .content-area; }
+  &.collapse { padding-top: 0; padding-right: 0; padding-left: 0; padding-bottom: 0; }
+  &.small-padding { padding-top: $v-rhythm * 3 !important; padding-right: 0 !important; padding-left: 0 !important; padding-bottom: $v-rhythm * 3 !important; }
+}
+
 .hero, #hero {
 //  Hero version
   .full-width-block-content-container {
@@ -51,16 +62,6 @@
     }
 
   }
-}
-
-// Non-hero version
-.full-width-block-content-container {
-  height: 100%;
-  padding-top: $v-rhythm * 2; padding-right: 0; padding-left: 0; padding-bottom: $v-rhythm * 2;
-  @include media($media__medium) { padding-top: $v-rhythm * 5; padding-right: 0; padding-left: 0; padding-bottom: $v-rhythm * 5; }
-
-  &.page-width { @extend .content-area; }
-  &.collapse { padding-top: 0; padding-right: 0; padding-left: 0; padding-bottom: 0; }
 }
 
 .full-width-block-container, .full-width-block-content-container {
@@ -176,21 +177,21 @@
     text-align: center;
     @include media($media__medium) { text-align: left; &.narrow { padding-right:$column * 4; } }
     @include media($media__large) { &.narrow { padding-right:$column * 6; } }
-    @include media($media__xlarge) { &.narrow { padding-right:$column * 10; } }
+    @include media($media__xlarge) { &.narrow { padding-right:$column * 8; } }
   }
 
   &.right {
     text-align: center;
     @include media($media__medium) { text-align: left; &.narrow { padding-left:$column * 4; } }
     @include media($media__large) { text-align: left; &.narrow { padding-left:$column * 6; } }
-    @include media($media__xlarge) { text-align: left; &.narrow { padding-left:$column * 10; } }
+    @include media($media__xlarge) { text-align: left; &.narrow { padding-left:$column * 8; } }
   }
 
   &.center {
     &.narrow {
       @include media($media__medium) {&.narrow { padding-left:$column * 2; padding-right:$column * 2; } }
       @include media($media__large) { &.narrow { padding-left:$column * 3; padding-right:$column * 3; } }
-      @include media($media__xlarge) { &.narrow { padding-left:$column * 5; padding-right:$column * 5; } }
+      @include media($media__xlarge) { &.narrow { padding-left:$column * 4; padding-right:$column * 4; } }
     }
 
   }
