--- a/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
+++ b/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
@@ -210,6 +210,7 @@ ul.anchor-links-list {
     a.active {
       background-color: $color__fipra-dark-gray;
       font-weight: $font__bold;
+      color:white;
     }
   }
 }
