--- a/wp-content/themes/fipradotcom/sass/elements/_buttons.scss
+++ b/wp-content/themes/fipradotcom/sass/elements/_buttons.scss
@@ -4,12 +4,12 @@
   color:$color__fipra-blue;
   &:hover { color: $color__fipra-blue-gray; }
   background-color: $color__fipra-periwinkle;
-  padding: $v-rhythm * 0.25 em(16px);
+  padding: $v-rhythm * 0.25 rem(16px);
   margin-bottom: $v-rhythm * 0.5;
-  margin-right: em(16px);
+  margin-right: rem(16px);
   &:last-child { margin-right: 0; }
   &.no-margin { margin:0; }
-  &.btn-large { padding: $v-rhythm * 0.5 em(24px); @include media($media__medium) { @include font-size(18); } }
+  &.btn-large { padding: $v-rhythm * 0.75 rem(16px); @include media($media__medium) { @include font-size(18); } }
   &.btn-small { @include font-size(14); }
   &.btn-extra-small { @include font-size(12); }
 
@@ -18,10 +18,14 @@
     color: white;
     text-shadow:0px -1px 0px darken($color__fipra-blue, 30%);
     @include transition(all 0.2s);
-    border-bottom:2px solid darken($color__fipra-blue, 20%);
+//    border-bottom:2px solid darken($color__fipra-blue, 20%);
     &:hover { opacity:0.7; color:white; }
 
-    &.btn-white { text-shadow:0px -1px 0px darken(white, 15%); border-bottom:2px solid darken(white, 30%); background-color: white; color:$color__fipra-blue; }
+    &.btn-white {
+      text-shadow:0px -1px 0px darken(white, 15%);
+//      border-bottom:2px solid darken(white, 30%);
+      background-color: white; color:$color__fipra-blue;
+    }
   }
 
   &.secondary {
