--- a/wp-content/themes/fipradotcom/sass/modules/_sidebar.scss
+++ b/wp-content/themes/fipradotcom/sass/modules/_sidebar.scss
@@ -10,9 +10,11 @@ ul.sidebar-list {
 
     a { display:block; padding:$v-rhythm / 2 em(12px);
       background-color: white;
-      border-bottom:1px solid darken($color__fipra-light-gray, 7%);
+//      border-bottom:1px solid darken($color__fipra-light-gray, 7%);
       &:hover { background-color: $color__fipra-mid-gray; }
     }
+
+    svg { width:24px; margin-top:6px; }
   }
 
 }
