--- a/wp-content/themes/fipradotcom/sass/pages/_profile.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_profile.scss
@@ -51,13 +51,13 @@
     a {
       display:block;
       @extend .white-box;
-      background-color: lighten($color__fipra-blue-gray, 10%);
+      border:0;
       width:100%; height:100%;
       text-align: center;
       &:hover { opacity: 0.5; }
-      .svg-icon { display: block !important; width:100%; background-color: $color__fipra-blue-gray; padding:$v-rhythm * 3; margin-bottom:$v-rhythm;
-        svg { height:70%; }}
-      .expertise-area-name { @include font-size(16); padding: $v-rhythm; color:white; }
+      .svg-icon { display: block !important; width:100%; padding:$v-rhythm * 3; margin-bottom:$v-rhythm;
+        svg { height:70%; fill:$color__fipra-blue; } }
+      .expertise-area-name { @include font-size(16); padding: $v-rhythm; color:$color__fipra-blue; }
     }
   }
 }
