--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -1136,8 +1136,11 @@ table:not(.no-style) {
     margin: 0;
     text-align: center; }
     .team-carousel .team-member .profile-photo {
-      line-height: 0;
-      border-bottom: 1px solid #bfc5d3; }
+      line-height: 0; }
+      .team-carousel .team-member .profile-photo img {
+        border-radius: 50%;
+        background-color: #e7e9eb;
+        border: 10px solid #e7e9eb; }
     .team-carousel .team-member h4 {
       font-weight: 700;
       margin-top: 0.375rem; }
@@ -2108,32 +2111,34 @@ ul.team-member-expertise {
     text-align: left;
     overflow: hidden;
     width: 100%;
-    background-color: white;
     margin-bottom: 0.75rem;
-    border-bottom: 2px solid #e6e6e6; }
+    background-color: white; }
     @media screen and (min-width: 801px) {
       .people-group-container .person {
         display: inline-block;
         width: 33.33333%;
-        height: 260px;
+        height: 300px;
         border-left: 5px solid #eceef2;
-        border-right: 5px solid #eceef2; } }
+        border-right: 5px solid #eceef2;
+        background-color: transparent; } }
     @media screen and (min-width: 841px) {
       .people-group-container .person {
-        width: 25%; } }
+        width: 25%;
+        height: 300px; } }
     @media screen and (min-width: 1100px) {
       .people-group-container .person {
         width: 20%;
-        height: 280px; } }
+        height: 330px; } }
     @media screen and (min-width: 1400px) {
       .people-group-container .person {
-        width: 16.66667%; } }
+        width: 16.66667%;
+        height: 310px; } }
     .people-group-container .person.full-width {
       width: 100%;
       border: 0; }
     .people-group-container .person h4 {
-      font-size: 18px;
-      font-size: 1.125rem;
+      font-size: 21px;
+      font-size: 1.3125rem;
       font-weight: 700;
       line-height: 1.125rem !important; }
     .people-group-container .person h6 {
@@ -2142,7 +2147,6 @@ ul.team-member-expertise {
       font-weight: 400; }
     .people-group-container .person .person-profile-photo {
       line-height: 1 !important;
-      max-height: 90%;
       text-align: center;
       line-height: 0.75rem; }
       @media screen and (max-width: 481px)  {
@@ -2160,9 +2164,13 @@ ul.team-member-expertise {
           background-color: #eceef2; }
           .people-group-container .person .person-profile-photo img {
             max-width: 90%;
-            margin-bottom: 0; } }
+            margin-bottom: 0;
+            border-radius: 50%;
+            border: 10px solid #dde0e1;
+            background-color: #dde0e1; } }
       .people-group-container .person .person-profile-photo:hover {
-        opacity: 0.7; }
+        opacity: 0.7;
+        border-radius: 50%; }
     .people-group-container .person .person-details {
       padding: 0.75rem 4.375em 0.75rem 0.5em; }
       @media screen and (min-width: 481px) and (max-width: 801px)  {
@@ -2174,16 +2182,15 @@ ul.team-member-expertise {
         .people-group-container .person .person-details {
           padding: 0.5625rem 0.75rem;
           position: absolute;
-          top: 160px;
+          top: 200px;
           left: 0;
-          background-color: white;
           height: 100%;
           width: 100%;
           -webkit-transition: all 0.5s;
           transition: all 0.5s; }
           .people-group-container .person .person-details h4 {
-            font-size: 16px;
-            font-size: 1rem; }
+            font-size: 17px;
+            font-size: 1.0625rem; }
           .people-group-container .person .person-details:hover {
             top: 0;
             background-color: #3e4a62;
@@ -2194,9 +2201,15 @@ ul.team-member-expertise {
                 color: #d4d8e1; }
             .people-group-container .person .person-details:hover .person-contact-details {
               display: block; } }
+      @media screen and (min-width: 841px) {
+        .people-group-container .person .person-details {
+          top: 210px; } }
       @media screen and (min-width: 1100px) {
         .people-group-container .person .person-details {
-          top: 150px; } }
+          top: 230px; } }
+      @media screen and (min-width: 1400px) {
+        .people-group-container .person .person-details {
+          top: 200px; } }
       .people-group-container .person .person-details .btn-container {
         position: absolute;
         top: 0;
@@ -4166,7 +4179,8 @@ ul.sidebar-list {
     .sidebar-contacts-container .sidebar-contacts-group .sidebar-contact img {
       max-width: 100px;
       display: block;
-      margin-bottom: 0.75rem; }
+      margin-bottom: 0.75rem;
+      border-radius: 50%; }
       @media screen and (min-width: 1400px) {
         .sidebar-contacts-container .sidebar-contacts-group .sidebar-contact img {
           float: left;
@@ -4377,18 +4391,23 @@ embed, iframe, object {
     .full-width-block-container.profile .full-width-block-content-container .full-width-block-content h4 {
       color: #bfc5d2 !important; }
     .full-width-block-container.profile .full-width-block-content-container .full-width-block-content img {
-      display: none; }
+      display: none;
+      border-radius: 50%;
+      background-color: #dfe2e5;
+      border: 10px solid #dfe2e5; }
       @media screen and (min-width: 481px) {
         .full-width-block-container.profile .full-width-block-content-container .full-width-block-content img {
           display: block;
           position: absolute;
-          bottom: -4.5rem;
+          bottom: 0;
           right: 20px;
-          height: 240px; } }
+          height: 200px;
+          top: 50%;
+          margin-top: -100px; } }
       @media screen and (min-width: 801px) {
         .full-width-block-container.profile .full-width-block-content-container .full-width-block-content img {
-          bottom: -7.5rem;
-          height: 340px; } }
+          margin-top: -125px;
+          height: 250px; } }
 
 .profile-content-area p.lead {
   font-size: 18px;
@@ -4618,6 +4637,7 @@ embed, iframe, object {
   vertical-align: middle;
   width: 100%;
   height: 100% !important;
+  padding-bottom: 3rem;
   padding-left: 48px;
   padding-right: 48px; }
   @media screen and (min-width: 1100px) {
