--- a/wp-content/themes/fipradotcom/sass/modules/_sidebar.scss
+++ b/wp-content/themes/fipradotcom/sass/modules/_sidebar.scss
@@ -42,7 +42,7 @@ ul.sidebar-list {
 
       &:first-child { border:0; padding-top:0; }
 
-      img { max-width: 100px; display:block; margin-bottom:$v-rhythm;
+      img { max-width: 100px; display:block; margin-bottom:$v-rhythm; border-radius:50%;
         @include media($media__xlarge) { float:left; margin-right:em(18px); }
       }
 
