--- a/wp-content/themes/fipradotcom/sass/pages/_home.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_home.scss
@@ -42,7 +42,7 @@
       }
       //Centre content vertically in bar
       .full-width-block-content-container {
-        display: table-cell; vertical-align: middle; width: 100%; height: 100% !important;
+        display: table-cell; vertical-align: middle; width: 100%; height: 100% !important; padding-bottom:$v-rhythm * 4;
 //        Add padding for the navigation buttons
         padding-left: 48px; padding-right: 48px;
         &:not(&.content-bar) {
