--- a/wp-content/themes/fipradotcom/sass/pages/_profile.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_profile.scss
@@ -17,8 +17,11 @@
         h4 { color: lighten($color__fipra-blue-gray, 35%) !important; }
         img {
           display:none;
-          @include media($media__small) { display:block; position:absolute; bottom:-$v-rhythm * 6; right:20px; height:240px; }
-          @include media($media__medium) { bottom:-$v-rhythm * 10; height:340px; }
+          border-radius: 50%;
+          background-color: $color__fipra-mid-gray;
+          border:10px solid $color__fipra-mid-gray;
+          @include media($media__small) { display:block; position:absolute; bottom:0; right:20px; height:200px; top:50%; margin-top:-100px; }
+          @include media($media__medium) { margin-top:-125px; height:250px; }
         }
       }
 
